--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,4 +6,11 @@ galaxy_info:
   description: An Ansible role template
   license: MIT
   min_ansible_version: "2.9"
+  platforms:
+    - name: Ubuntu
+      versions:
+        - all
+  galaxy_tags:
+    - foo
+    - bar
 dependencies: []
